# modular-search

./: .gitignore  README.md  pyproject.toml
results/: data_analytics.py
src/: evaluator.py  main.py  query-model.py
src/modular_search/: __init__.py  scraper.py
src/modular_search/blocks/: codebase.py
src/modular_search/controller/: codebase.py  core.py
src/modular_search/engines/: core.py
src/modular_search/extractors/: core.py
src/modular_search/rerankers/: codebase.py  core.py
src/tests/: temp.py
survey/: best_response.md  cleaned_database.csv  database_output.csv  df.csv  df_json.csv  main.py
