[project]
name = "modular-search"
version = "0.1.0"
description = "A Modular Search Framework for Military Developers"
readme = "README.md"
authors = [
    { name = "Prannaya Gupta", email = "prannayagupta@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
